compile the postgenerate package for Java8 to properly error out when invoked with Java < 11